<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright 2008-2014 Qualogy Solutions B.V.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    	http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.qualogy.qafe</groupId>
        <artifactId>platform</artifactId>
        <version>3.1.0-rc2-SNAPSHOT</version>
    </parent>
    <groupId>com.qualogy.qafe.platform</groupId>
    <artifactId>qafe-mobile-gwt</artifactId>
    <packaging>war</packaging>
    <name>QAFE Mobile GWT </name>
    <description>Mobile frontend application for QAFE</description>

    <properties>
        <fileHeaderBaseDir>${project.parent.basedir}</fileHeaderBaseDir>
        <gwtversion>2.4.0</gwtversion>
        <platform.module.version>${project.version}</platform.module.version> <!-- Used in profiles -->
        <runTarget>index.jsp</runTarget>
    </properties>

    <build>
        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-ftp</artifactId>
                <version>2.1</version>
            </extension>
        </extensions>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>gwt-maven-plugin</artifactId>
                <version>2.4.0</version>
                <executions>
                    <execution>
                        <configuration>
                            <inplace>true</inplace>
                           <!--  <extraJvmArgs>-Xms512m -Xmx1024m -XX:PermSize=512M -XX:MaxPermSize=512M -XX:-UseGCOverheadLimit -Dgwt.jjs.permutationWorkerFactory=com.google.gwt.dev.ThreadedPermutationWorkerFactory</extraJvmArgs> -->
                            <style>${qafe-compiler-debug}</style>
                            <skip>${gwt.compile.skip}</skip>
                            <force>true</force>
                            <localWorkers>${qafe.gwt.permutation.workers}</localWorkers>
                        </configuration>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <!--execution>
                        <configuration>
                            <module>com.qualogy.qafe.mgwt.QAFEMGwt</module>
                        </configuration>
                        <goals>
                            <goal>compile</goal>
                            <goal>test</goal>
                        </goals>
                    </execution-->
                </executions>
            </plugin>



            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-eclipse-plugin</artifactId>
                <version>2.8</version>

                <configuration>
                    <downloadSources>true</downloadSources>
                    <downloadJavadocs>false</downloadJavadocs>
                    <buildOutputDirectory>target/${project.artifactId}-${project.version}/WEB-INF/classes</buildOutputDirectory>
                    <projectnatures>
                        <projectnature>org.eclipse.jdt.core.javanature</projectnature>
                        <projectnature>com.google.gdt.eclipse.core.webAppNature</projectnature>

                        <nature>com.google.gwt.eclipse.core.gwtNature</nature>
                    </projectnatures>
                    <buildcommands>
                        <buildcommand>org.eclipse.jdt.core.javabuilder</buildcommand>
                        <buildcommand>com.google.gdt.eclipse.core.webAppProjectValidator</buildcommand>

                        <buildcommand>com.google.appengine.eclipse.core.projectValidator</buildcommand>
                        <buildcommand>com.google.gwt.eclipse.core.gwtProjectValidator</buildcommand>
                    </buildcommands>
                    <classpathContainers>
                        <classpathContainer>org.eclipse.jdt.launching.JRE_CONTAINER</classpathContainer>

                        <classpathContainer>com.google.gwt.eclipse.core.GWT_CONTAINER</classpathContainer>
                    </classpathContainers>
                    <excludes>
                        <exclude>com.google.gwt:gwt-servlet</exclude>
                        <exclude>com.google.gwt:gwt-user</exclude>
                        <exclude>com.google.gwt:gwt-dev</exclude>
                        <exclude>javax.validation:validation-api</exclude>
                    </excludes>


                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <id>assemble</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <descriptors>
                        <descriptor>src/main/assembly/clientcode.xml</descriptor>
                    </descriptors>
                </configuration>
            </plugin>
            <!-- <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>aspectj-maven-plugin</artifactId>
            </plugin>  -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
            </plugin>

        </plugins>
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/client/**</include>
                    <include>**/*.gwt.xml</include>
                </includes>
            </resource>
        </resources>
    </build>

    <dependencies>
        <dependency>
            <groupId>com.googlecode.mgwt</groupId>
            <artifactId>mgwt</artifactId>
            <version>1.1.2</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.7</version>
            <type>jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-user</artifactId>
            <version>${gwtversion}</version>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-servlet</artifactId>
            <version>${gwtversion}</version>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-dev</artifactId>
            <version>${gwtversion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>1.0.0.GA</version>
        </dependency>
        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>1.0.0.GA</version>
            <classifier>sources</classifier>
        </dependency>
        <dependency>
            <groupId>com.qualogy.qafe.platform</groupId>
            <artifactId>qafe-core</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.qualogy.qafe.platform</groupId>
            <artifactId>qafe-business</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.qualogy.qafe.platform</groupId>
            <artifactId>qafe-web</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.qualogy.qafe.platform</groupId>
            <artifactId>qafe-presentation</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.jibx</groupId>
            <artifactId>jibx-extras</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jibx</groupId>
            <artifactId>jibx-run</artifactId>
        </dependency>
        <dependency>
            <groupId>commons-fileupload</groupId>
            <artifactId>commons-fileupload</artifactId>
        </dependency>
        <dependency>
            <groupId>com.oracle</groupId>
            <artifactId>ojdbc5</artifactId>
        </dependency>
        <dependency>
            <groupId>com.qualogy.qafe.platform.qafe-distribution</groupId>
            <artifactId>standard</artifactId>
            <version>${project.version}</version>
            <!--  <scope>provided</scope>  -->
        </dependency>
    </dependencies>
    <!-- <profiles>
        <profile>
            <id>qafe-demo-edition</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-war-plugin</artifactId>
                        <version>2.1.1</version>
                        <configuration>
                          <packagingExcludes>WEB-INF/deploy/**</packagingExcludes>
                          <overlays>
                            <overlay>
                              <groupId>com.qualogy.qafe.platform.editions.demo</groupId>
                              <artifactId>flex</artifactId>
                            </overlay>
                            <overlay>
                              <groupId>com.qualogy.qafe.platform.editions.demo</groupId>
                              <artifactId>common</artifactId>
                            </overlay>
                            <overlay>
                              <groupId>com.qualogy.qafe.platform.editions</groupId>
                              <artifactId>common</artifactId>
                            </overlay>
                            <overlay>
                              <groupId>com.qualogy.qafe.platform.qafe-applications.showcaseapp</groupId>
                              <artifactId>flex</artifactId>
                            </overlay>
                            <overlay>
                              <groupId>com.qualogy.qafe.platform.qafe-applications.showcaseapp</groupId>
                              <artifactId>common</artifactId>
                            </overlay>
                            <overlay>
                              <groupId>com.qualogy.qafe.platform.qafe-applications.belastingdienstapp</groupId>
                              <artifactId>flex</artifactId>
                            </overlay>
                            <overlay>
                              <groupId>com.qualogy.qafe.platform.qafe-applications.belastingdienstapp</groupId>
                              <artifactId>common</artifactId>
                            </overlay>
                            <overlay>
                              <groupId>com.qualogy.qafe.platform.qafe-applications.chartapp</groupId>
                              <artifactId>flex</artifactId>
                            </overlay>
                            <overlay>
                              <groupId>com.qualogy.qafe.platform.qafe-applications.chartapp</groupId>
                              <artifactId>common</artifactId>
                            </overlay>
                            <overlay>
                              empty groupId/artifactId represents the current build
                            </overlay>
                          </overlays>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
            <dependencies>
                <dependency>
                    <groupId>com.qualogy.qafe.platform.qafe-distribution</groupId>
                    <artifactId>standard</artifactId>
                    <version>${platform.module.version}</version>
                </dependency>
                <dependency>
                    <groupId>com.qualogy.qafe.platform.qafe-licensemanager</groupId>
                    <artifactId>client</artifactId>
                    <version>${platform.module.version}</version>
                </dependency>
                <dependency>
                    <groupId>com.qualogy.qafe.platform.editions</groupId>
                    <artifactId>common</artifactId>
                    <version>${platform.module.version}</version>
                    <type>war</type>
                </dependency>
                <dependency>
                    <groupId>com.qualogy.qafe.platform.editions.demo</groupId>
                    <artifactId>flex</artifactId>
                    <version>${platform.module.version}</version>
                    <type>war</type>
                </dependency>
                <dependency>
                    <groupId>com.qualogy.qafe.platform.editions.demo</groupId>
                    <artifactId>common</artifactId>
                    <version>2.0</version>
                    <type>war</type>
                </dependency>
                <dependency>
                    <groupId>com.qualogy.qafe.platform.qafe-applications.showcaseapp</groupId>
                    <artifactId>lib</artifactId>
                    <version>${platform.module.version}</version>
                </dependency>
                <dependency>
                    <groupId>com.qualogy.qafe.platform.qafe-applications.showcaseapp</groupId>
                    <artifactId>common</artifactId>
                    <version>${platform.module.version}</version>
                    <type>war</type>
                </dependency>
                <dependency>
                    <groupId>com.qualogy.qafe.platform.qafe-applications.showcaseapp</groupId>
                    <artifactId>flex</artifactId>
                    <version>${platform.module.version}</version>
                    <type>war</type>
                </dependency>
                <dependency>
                    <groupId>com.qualogy.qafe.platform.qafe-applications.belastingdienstapp</groupId>
                    <artifactId>lib</artifactId>
                    <version>${platform.module.version}</version>
                </dependency>
                <dependency>
                    <groupId>com.qualogy.qafe.platform.qafe-applications.belastingdienstapp</groupId>
                    <artifactId>common</artifactId>
                    <version>${platform.module.version}</version>
                    <type>war</type>
                </dependency>
                <dependency>
                    <groupId>com.qualogy.qafe.platform.qafe-applications.belastingdienstapp</groupId>
                    <artifactId>flex</artifactId>
                    <version>${platform.module.version}</version>
                    <type>war</type>
                </dependency>
                <dependency>
                    <groupId>com.qualogy.qafe.platform.qafe-applications.chartapp</groupId>
                    <artifactId>lib</artifactId>
                    <version>${platform.module.version}</version>
                </dependency>
                <dependency>
                    <groupId>com.qualogy.qafe.platform.qafe-applications.chartapp</groupId>
                    <artifactId>common</artifactId>
                    <version>${platform.module.version}</version>
                    <type>war</type>
                </dependency>
                <dependency>
                    <groupId>com.qualogy.qafe.platform.qafe-applications.chartapp</groupId>
                    <artifactId>flex</artifactId>
                    <version>${platform.module.version}</version>
                    <type>war</type>
                </dependency>
            </dependencies>
        </profile>
    </profiles> -->
</project>